# GeminiAPI01

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  contract.py  main.py  prompt.txt
